# OOP_labs_Jan_Arslanov

lab_1/: CMakeCache.txt  CMakelists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main  main.cpp  tests
lab_1/include/: counter.h
lab_1/src/: counter.cpp
lab_1/test/: test_1.cpp
lab_2/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main  main.cpp  tests
lab_2/include/: Decimal.h
lab_2/src/: decimal.cpp
lab_2/test/: test_01.cpp
lab_3/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  lab_3_exe  main.cpp  tests
lab_3/include/: figure.h  point.h  rectangle.h  square.h  triangle.h
lab_3/src/: figure.cpp  point.cpp  rectangle.cpp  square.cpp  triangle.cpp
lab_3/test/: test_01.cpp
lab_4/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  lab_4  main.cpp  run_tests
lab_4/include/: array.h  figure.h  point.h  rectangle.h  square.h  triangle.h
lab_4/src/: array.cpp  rectangle.cpp  square.cpp  triangle.cpp
lab_4/tests/: test_01.cpp
lab_5/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  lab_5  main.cpp  run_tests
lab_5/include/: Array.h  ConstIterator.h  MemoryRes.h  iterator.h
lab_5/src/: MemoryRes.cpp  array.cpp
lab_5/tests/: test_01.cpp
lab_6/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  lab_6  main.cpp  npcs.txt  npcs_text.txt  run_tests
lab_6/.devcontainer/: devcontainer.json
lab_6/include/: BattleArena.h  ConsoleObserver.h  FileObserver.h  NPC.h  extendedVisitor.h  ork.h  squirell.h
lab_6/src/: BattleArena.cpp  ConsoleObserver.cpp  FileObserver.cpp  druids.cpp  extendedVisitor.cpp  squirell.cpp
lab_6/tests/: test_01.cpp
lab_7/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  lab_7  main.cpp
lab_7/include/: BattleArena.h  NPC.h  NPCfactory.h  druids.h  extendedVisitor.h  observer.h  visitor.h
lab_7/logs/: logging.txt
lab_7/src/: BattleArena.cpp  extendedVisitor.cpp  ork.cpp
lab_7/tests/: test_01.cpp
logs/: logging.txt
